# envanter

./: .env.example  .env.production  .gitignore  .replit  502_ERROR_FIX_APPLIED.md  502_FIX_REPORT.md  ACTION_SUMMARY.md  B2_DEPLOYMENT_FINAL_TR.md  B2_INTEGRATION_GUIDE.md  B2_PRODUCTION_SUMMARY_TR.md  B2_STORAGE_VERIFICATION.md  BASIT_QR_MODU.md  BROWSER_CACHE_FIX.md  BUG_FIXES_APPLIED.md  CAMERA_DEPLOYMENT_FINAL.md  CAMERA_VERIFICATION.md  CERMAKSERVIS_USER_REPORT.md  COMPLETE_FIX.sql  COPY_PASTE_GUIDE.md  DATABASE_ISOLATION_FIX.md  DATABASE_SCHEMA_FIX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DUAL_MODE_SETUP_COMPLETE.md  DUPLICATE_PREVENTION_FIX.md  ENV_VARIABLES_SUMMARY.md  FINAL_FIX.md  FINAL_SUMMARY.md  FIX_502_ERROR.md  FLASK_MODULE_FIX.md  ISOLATION_SYSTEM.md  KALICI_DUPLICATE_ONLEME.md  KAMERA_OLMADAN_TEST.md  MISSING_USERS_FOUND.md  MOBILE_UI_TESTING.md  NEW_DATABASE_MIGRATION_SUCCESS.md  PGADMIN4_COLUMN_GUIDE.md  POSTGRESQL_BOOLEAN_FIX.md  POSTGRESQL_COLUMN_CHECK.sql  (+149 more)
static/css/: loading.css  responsive.css
static/js/: mobile-performance.js  ultra_qr_scanner.js
templates/: admin.html  admin_count.html  admin_login.html  admin_qr_manage.html  admin_users.html  count.html  count_password.html  index.html  login.html  qr_codes.html  qr_management.html  reports.html  test_qr_simple.html
tests/: simulate_camera_scan.py
